@@ -364,6 +364,90 @@ then
     popd
 fi
 
+if $enable_jxl
+then
+    # Build libjxl
+    #  PKG_CONFIG_PATH=/work/lib/pkgconfig:/usr/lib/pkgconfig pkg-config --static libjxl_threads --libs
+    #    -L/work/lib -ljxl_threads -lm
+    #  PKG_CONFIG_PATH=/work/lib/pkgconfig:/usr/lib/pkgconfig pkg-config --static libjxl --libs
+    #    -L/work/lib -L -ljxl -lm -lhwy -lbrotlienc -lbrotlidec -lbrotlicommon -ljxl_cms -lm
+    #
+    # Removed -DJPEGXL_FORCE_SYSTEM_LCMS2=true
+    # Added -DJPEGXL_ENABLE_SKCMS=true, -DJPEGXL_BUNDLE_SKCMS=true
+    printf "=== Building ${SRC}/libjxl...\n"
+    LIBJXL_BUILD="${SRC}/libjxl_build"
+    rm -rf "${LIBJXL_BUILD}"
+    mkdir -p "${LIBJXL_BUILD}"
+    pushd "${LIBJXL_BUILD}"
+    cmake \
+        -DBUILD_SHARED_LIBS=false \
+        -DBUILD_TESTING=off \
+        -DCMAKE_BUILD_TYPE=Debug \
+        -DCMAKE_CXX_FLAGS="-DHWY_DISABLED_TARGETS=HWY_SSSE3 ${CXXFLAGS} -fPIC" \
+        -DCMAKE_C_FLAGS="-DHWY_DISABLED_TARGETS=HWY_SSSE3 ${CFLAGS} -fPIC" \
+        -DCMAKE_INSTALL_PREFIX=$WORK \
+        -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
+        -DJPEGXL_BUNDLE_SKCMS=false \
+        -DJPEGXL_ENABLE_BENCHMARK=false \
+        -DJPEGXL_ENABLE_EXAMPLES=false \
+        -DJPEGXL_ENABLE_FUZZERS=false \
+        -DJPEGXL_ENABLE_JPEGLI=false \
+        -DJPEGXL_ENABLE_JPEGLI=false \
+        -DJPEGXL_ENABLE_MANPAGES=OFF \
+        -DJPEGXL_ENABLE_SJPEG=false \
+        -DJPEGXL_ENABLE_SKCMS=false \
+        -DJPEGXL_ENABLE_TOOLS=true \
+        -DJPEGXL_ENABLE_VIEWERS=false \
+        -DJPEGXL_FORCE_SYSTEM_LCMS2=false \
+        "${SRC}/libjxl"
+    make -j$(nproc)
+    # libjxl claims to require libjxl_cms, but does not build/install one!
+    #sed -i 's/ libjxl_cms//' ./lib/libjxl.pc
+    make install
+    cp third_party/brotli/*.a $WORK/lib
+    cp third_party/brotli/*.pc $WORK/lib/pkgconfig
+    printf "==================\n"
+    printf "JXL version info\n"
+    ${WORK}/bin/cjxl --version
+    printf "==================\n"
+    popd
+fi
+
+if $enable_jasper
+then
+    printf "=== Building ${SRC}/jasper...\n"
+    # With all extras removed from libjasper
+    # PKG_CONFIG_PATH=/work/lib/pkgconfig:/usr/lib/pkgconfig pkg-config --static jasper --libs
+    # -L/work/lib -ljasper
+
+    JASPER_BUILD="${SRC}/jasper_build"
+    rm -rf "${JASPER_BUILD}"
+    mkdir -p "${JASPER_BUILD}"
+    pushd "${JASPER_BUILD}"
+    cmake -G "Unix Makefiles" -H"$SRC/jasper" \
+      -DCMAKE_BUILD_TYPE=Debug \
+      -DCMAKE_CXX_COMPILER=$CXX \
+      -DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+      -DCMAKE_C_COMPILER=$CC \
+      -DCMAKE_C_FLAGS="$CFLAGS -fPIC" \
+      -DCMAKE_INSTALL_PREFIX=$WORK \
+      -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
+      -DJAS_ENABLE_LIBHEIF=false \
+      -DJAS_ENABLE_LIBJPEG=false \
+      -DJAS_ENABLE_OPENGL=false \
+      -DJAS_ENABLE_OPENGL=false \
+      -DJAS_ENABLE_SHARED=false \
+      -DJAS_INCLUDE_BMP_CODEC=false \
+      -DJAS_INCLUDE_JPG_CODEC=false \
+      -DJAS_INCLUDE_MIF_CODEC=false \
+      -DJAS_INCLUDE_PNM_CODEC=false \
+      -DJAS_INCLUDE_RAS_CODEC=false \
+      "$SRC/jasper"
+    make -j$(nproc)
+    make install
+    popd
+fi
+
 if $enable_heif
 then
 
@@ -528,90 +612,6 @@ then
         -DWITH_JPEG_DECODER=off \
         -DWITH_JPEG_ENCODER=off \
         "${SRC}/libheif"
-    make -j$(nproc)
-    make install
-    popd
-fi
-
-if $enable_jxl
-then
-    # Build libjxl
-    #  PKG_CONFIG_PATH=/work/lib/pkgconfig:/usr/lib/pkgconfig pkg-config --static libjxl_threads --libs
-    #    -L/work/lib -ljxl_threads -lm
-    #  PKG_CONFIG_PATH=/work/lib/pkgconfig:/usr/lib/pkgconfig pkg-config --static libjxl --libs
-    #    -L/work/lib -L -ljxl -lm -lhwy -lbrotlienc -lbrotlidec -lbrotlicommon -ljxl_cms -lm
-    #
-    # Removed -DJPEGXL_FORCE_SYSTEM_LCMS2=true
-    # Added -DJPEGXL_ENABLE_SKCMS=true, -DJPEGXL_BUNDLE_SKCMS=true
-    printf "=== Building ${SRC}/libjxl...\n"
-    LIBJXL_BUILD="${SRC}/libjxl_build"
-    rm -rf "${LIBJXL_BUILD}"
-    mkdir -p "${LIBJXL_BUILD}"
-    pushd "${LIBJXL_BUILD}"
-    cmake \
-        -DBUILD_SHARED_LIBS=false \
-        -DBUILD_TESTING=off \
-        -DCMAKE_BUILD_TYPE=Debug \
-        -DCMAKE_CXX_FLAGS="-DHWY_DISABLED_TARGETS=HWY_SSSE3 ${CXXFLAGS} -fPIC" \
-        -DCMAKE_C_FLAGS="-DHWY_DISABLED_TARGETS=HWY_SSSE3 ${CFLAGS} -fPIC" \
-        -DCMAKE_INSTALL_PREFIX=$WORK \
-        -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
-        -DJPEGXL_BUNDLE_SKCMS=false \
-        -DJPEGXL_ENABLE_BENCHMARK=false \
-        -DJPEGXL_ENABLE_EXAMPLES=false \
-        -DJPEGXL_ENABLE_FUZZERS=false \
-        -DJPEGXL_ENABLE_JPEGLI=false \
-        -DJPEGXL_ENABLE_JPEGLI=false \
-        -DJPEGXL_ENABLE_MANPAGES=OFF \
-        -DJPEGXL_ENABLE_SJPEG=false \
-        -DJPEGXL_ENABLE_SKCMS=false \
-        -DJPEGXL_ENABLE_TOOLS=true \
-        -DJPEGXL_ENABLE_VIEWERS=false \
-        -DJPEGXL_FORCE_SYSTEM_LCMS2=false \
-        "${SRC}/libjxl"
-    make -j$(nproc)
-    # libjxl claims to require libjxl_cms, but does not build/install one!
-    #sed -i 's/ libjxl_cms//' ./lib/libjxl.pc
-    make install
-    cp third_party/brotli/*.a $WORK/lib
-    cp third_party/brotli/*.pc $WORK/lib/pkgconfig
-    printf "==================\n"
-    printf "JXL version info\n"
-    ${WORK}/bin/cjxl --version
-    printf "==================\n"
-    popd
-fi
-
-if $enable_jasper
-then
-    printf "=== Building ${SRC}/jasper...\n"
-    # With all extras removed from libjasper
-    # PKG_CONFIG_PATH=/work/lib/pkgconfig:/usr/lib/pkgconfig pkg-config --static jasper --libs
-    # -L/work/lib -ljasper
-
-    JASPER_BUILD="${SRC}/jasper_build"
-    rm -rf "${JASPER_BUILD}"
-    mkdir -p "${JASPER_BUILD}"
-    pushd "${JASPER_BUILD}"
-    cmake -G "Unix Makefiles" -H"$SRC/jasper" \
-      -DCMAKE_BUILD_TYPE=Debug \
-      -DCMAKE_CXX_COMPILER=$CXX \
-      -DCMAKE_CXX_FLAGS="$CXXFLAGS" \
-      -DCMAKE_C_COMPILER=$CC \
-      -DCMAKE_C_FLAGS="$CFLAGS -fPIC" \
-      -DCMAKE_INSTALL_PREFIX=$WORK \
-      -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
-      -DJAS_ENABLE_LIBHEIF=false \
-      -DJAS_ENABLE_LIBJPEG=false \
-      -DJAS_ENABLE_OPENGL=false \
-      -DJAS_ENABLE_OPENGL=false \
-      -DJAS_ENABLE_SHARED=false \
-      -DJAS_INCLUDE_BMP_CODEC=false \
-      -DJAS_INCLUDE_JPG_CODEC=false \
-      -DJAS_INCLUDE_MIF_CODEC=false \
-      -DJAS_INCLUDE_PNM_CODEC=false \
-      -DJAS_INCLUDE_RAS_CODEC=false \
-      "$SRC/jasper"
     make -j$(nproc)
     make install
     popd
